chore: fix up styling on ios

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,10 @@ body {
   background-color: #fafafb;
   font-weight: 300;
 }
+
+html, body, #root {
+  height: 100%;
+  widtH: 100%;
+  position: fixed;
+  overflow: hidden;
+}
